@@ -723,6 +723,11 @@ set {
 	/* Make the message in static-quit show in all quits - meaning no
            custom quits are allowed on local server */
 	/* static-quit "Client quit";	*/
+
+	/* You can also block all part reasons by uncommenting this and say 'yes',
+	 * or specify some other text (eg: "Bye bye!") to always use as a comment.. */
+	/* static-part yes; */
+
 	/* This allows you to make certain stats oper only, use * for all stats,
 	 * leave it out to allow users to see all stats. Type '/stats' for a full list.
 	 * Some admins might want to remove the 'kGs' to allow normal users to list
