@@ -5247,6 +5247,9 @@ int	_conf_set(ConfigFile *conf, ConfigEntry *ce)
 		else if (!strcmp(cep->ce_varname, "static-quit")) {
 			ircstrdup(tempiConf.static_quit, cep->ce_vardata);
 		}
+		else if (!strcmp(cep->ce_varname, "static-part")) {
+			ircstrdup(tempiConf.static_part, cep->ce_vardata);
+		}
 		else if (!strcmp(cep->ce_varname, "who-limit")) {
 			tempiConf.who_limit = atol(cep->ce_vardata);
 		}
@@ -5663,6 +5666,9 @@ int	_test_set(ConfigFile *conf, ConfigEntry *ce)
 			CheckNull(cep);
 		}
 		else if (!strcmp(cep->ce_varname, "static-quit")) {
+			CheckNull(cep);
+		}
+		else if (!strcmp(cep->ce_varname, "static-part")) {
 			CheckNull(cep);
 		}
 		else if (!strcmp(cep->ce_varname, "who-limit")) {
